8229202: Docker reporting causes secondary crashes in error handling

Reviewed-by: coleenp, hseigel, mseledtsov